--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.16.3",
-    "node-fetch": "^2.2.0"
+    "lodash": "^4.17.10",
+    "node-fetch": "^2.2.0",
+    "xml-js": "^1.6.7",
+    "xml2json": "^0.11.2"
   },
   "scripts": {
     "start": "node index.js",
