--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "express": "^4.16.3",
     "lodash": "^4.17.10",
     "node-fetch": "^2.2.0",
+    "nodemailer": "^4.6.8",
     "xml-js": "^1.6.7",
     "xml2json": "^0.11.2"
   },
